# UglyDouglyss

./: NumberGuess.py  README.md
API/API/: pyproject.toml
API/API/flaskr/: __init__.py  blog.py  schema.sql
API/API/flaskr.egg-info/: PKG-INFO  SOURCES.txt
API/API/flaskr/static/: style.css
API/API/flaskr/templates/: base.html
API/API/flaskr/templates/auth/: login.html  register.html
API/API/flaskr/templates/blog/: comments.html  index.html  updateComment.html
API/API/instance/: flaskr.sqlite
