[project]
name = "flaskr"
version = "1.0.0"
description = "A blog application with comments"
requires-python = ">=3.8"
dependencies = [
    "flask",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["flaskr*"]
